ci_directory/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-moritz
  name: demo-svc-moritz
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
